071 ==> 456263 - Missing feature for searching pictures containing actual detected faces.
072 ==> 439643 - Add count()-like condition to search.
073 ==> 425047 - Trash icon should reflect if trash is full or empty.
074 ==> 384820 - Allow matching library paths across different operating systems?
075 ==> 456749 - Cross-platform filename support.
076 ==> 424965 - Provide UI for Database Network Share for multiple mountpaths.
077 ==> 310106 - MYSQL : try to access to database from two computers and collections get lost.
078 ==> 456591 - No warning when delete folder not empty.
079 ==> 457229 - Importing, wrong date.
080 ==> 415536 - Rename on Import.
081 ==> 457347 - Fix crash in qtav libavfilter with FFMPEG 5.
082 ==> 402922 - Spell check.
083 ==> 092310 - Wish: spell check support in picture comments.
084 ==> 360954 - No spell checking when entering Tags.
085 ==> 256471 - Add spell checking to text areas.
086 ==> 407468 - Metadata Edit window is too small.
087 ==> 457602 - Configurable first character for the unique modifier.
088 ==> 457594 - The facesengine binary should be installed to AppData\Local and not AppData\Roaming.
089 ==> 435070 - Use WAL mode for SQLite databases.
090 ==> 456024 - Use Write-Ahead-Logging as default journalling mode.
091 ==> 376345 - Can't disable "auto spell check" while editing metadata.
092 ==> 200223 - Default language of spellchecker is ignored.
093 ==> 365263 - Dragging a image to an Album cannot see which album easily.
094 ==> 426115 - Make drag-n-drop more evident.
095 ==> 411550 - Difficulty to drag and drop a face tag to people group.
096 ==> 458003 - Highlight albums when "dragging" items on it.
097 ==> 458082 - MP4 video failed to update metadata timestamp.
098 ==> 283492 - Display only favorite languages in language selection comboboxes.
099 ==> 370192 - Better handling of language selection menu entries with Captions tab.
100 ==> 458163 - Cannot modify an existing BQM process.
101 ==> 